@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -24,8 +24,15 @@
 package com.mysql.cj.api.xdevapi;
 
 /**
- * Common interface for classes representing JSON <b>object</b>, <b>array</b>, <b>number</b>, <b>string</b> and 'true', 'false' and 'null' literals.
+ * Common interface for classes representing standard JSON <b>object</b>, <b>array</b>, <b>number</b>, <b>string</b> and 'true', 'false' and 'null' literals
+ * and non-standard extensions like mysqlx.expr() expressions.
  */
 public interface JsonValue {
 
+    /**
+     * @return human readable "pretty" JSON string
+     */
+    default String toFormattedString() {
+        return toString();
+    }
 }
