@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -37,34 +37,25 @@ public class JsonArray extends ArrayList<JsonValue> implements JsonValue {
     @Override
     public String toString() {
         StringBuilder sb = new StringBuilder("[");
-        boolean isFirst = true;
         for (JsonValue val : this) {
-            if (isFirst) {
-                isFirst = false;
-            } else {
-                sb.append(", ");
+            if (sb.length() > 1) {
+                sb.append(",");
             }
-
             sb.append(val.toString());
         }
-
         sb.append("]");
         return sb.toString();
     }
 
-    public String toPackedString() {
+    @Override
+    public String toFormattedString() {
         StringBuilder sb = new StringBuilder("[");
-        boolean isFirst = true;
         for (JsonValue val : this) {
-            if (isFirst) {
-                isFirst = false;
-            } else {
-                sb.append(",");
+            if (sb.length() > 1) {
+                sb.append(", ");
             }
-
-            sb.append(val.toString());
+            sb.append(val.toFormattedString());
         }
-
         sb.append("]");
         return sb.toString();
     }
