@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -33,7 +33,7 @@ import com.mysql.cj.xdevapi.JsonParser.EscapeChar;
  */
 public class JsonString implements JsonValue {
 
-    static HashMap<Character, String> escapeChars = new HashMap<Character, String>();
+    static HashMap<Character, String> escapeChars = new HashMap<>();
 
     static {
         for (EscapeChar ec : EscapeChar.values()) {
