@@ -3,6 +3,8 @@
 
 Version 8.0.9
 
+  - Fix for Bug#27151601, WL#11210: DOCUMENT PATCH EXPRESSIONS ARE NOT SUPPORTED.
+
   - WL#11210, DevAPI: Modify/MergePatch.
 
   - Fix for Bug#79612 (22362474), CONNECTION ATTRIBUTES LOST WHEN CONNECTING WITHOUT DEFAULT DATABASE.
